--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 body {
     font-size: 14px;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .machine {
     margin-top: 20px;
     background-color: red;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 20px;
 }
 
 #canvas{
